# wg

./: README.md  package.json  pnpm-lock.yaml  postcss.config.mjs  postcss.config.ts
ai/: message.tsx
app/: agent.tsx  globals.css  layout-shell.tsx  layout.tsx  page.tsx
app/(auth)/auth/: page.tsx
app/api/ai/chat/: route.ts
app/api/ai/generate-content/: route.ts
app/api/ai/speech/: route.ts
app/api/ai/speech-to-text/: route.ts
app/api/auth/[...nextauth]/: route.ts
app/dashboard/: page.tsx
app/learn/[topicId]/: page.tsx
components/: agent.tsx  app-sidebar.tsx  audio-mode-toggle.tsx  chat-messages.tsx  chat-panel.tsx  chat.tsx  guest-menu.tsx  header.tsx  message.tsx  model-selector.tsx  provider.tsx  render-message.tsx  session-provider-wrapper.tsx  user-menu.tsx
components/artifact/: chat-artifact-container.tsx  tool-invocation-content.tsx
components/auth/: login-form.tsx
components/dashboard/: dashboard-content.tsx
components/learning/: generative-content.tsx  learning-interface.tsx  voice-controls.tsx
components/prebuilt/: github.tsx  invoice.tsx  message.tsx  weather.tsx
components/ui/: codeblock.tsx
hooks/: use-mobile.tsx
lib/: auth.ts  client-utils.tsx  server-utils.tsx  shared-types.tsx  utils.ts
lib/ai/: client.ts
lib/config/: models.ts
lib/tools/search/providers/: base.ts  searxng.ts  tavily.ts
lib/utils/: url.ts
python-backend/: README.md  pyproject.toml  requirements.txt  start.py
python-backend/tools/: github.py  invoice.py  weather.py
types/: next-auth.d.ts
utils/: server.tsx
